<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">


    <android.support.v4.widget.DrawerLayout
        android:background="@color/colorPrimary"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="9">

                <Button
                    android:id="@+id/go_to_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/button_black"
                    android:text="@string/scheduler"
                    />
                <Button
                    android:id="@+id/go_to_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/notes"
                    android:background="@drawable/button_black"/>
                <Button
                    android:id="@+id/go_to_planning"

                    android:layout_width="wrap_content"
                    android:background="@drawable/button_black"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/plans" />


            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/content_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_info"
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:layout_margin="12dp"
                        android:background="@drawable/ic_info" />

                    <TextView
                        android:id="@+id/tv_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toRightOf="@id/iv_info"
                        android:text="@string/tv_info"
                        android:textColor="@color/colorMainText"
                        android:textSize="20sp" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_opt_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_opt1"
                        android:textColor="@color/colorMainText"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_opt_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_opt_first"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/text_opt2"
                        android:textColor="@color/colorMainText"
                        android:textSize="18sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="206dp">

                        <TextView
                            android:id="@+id/tv_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="13dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="19dp"
                            android:gravity="center"
                            android:text="@string/feedback"
                            android:textColor="@color/colorMainText"
                            android:textSize="16sp" />
                    </RelativeLayout>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/menu_main_nav" >

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>