<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".planning.CreatePlanActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/toolbar">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".planning.CreatePlanActivity">


            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"

                android:padding="6dp"
                app:layout_constraintStart_toEndOf="@+id/text_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_essence"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/to_describe_essence"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <TextView
                android:id="@+id/text_ask_for"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/to_describe_by_points"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_short_descript" />

            <EditText
                android:id="@+id/edit_short_descript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:background="@drawable/edit_text_style"
                android:padding="6dp"
                android:hint="@string/essence_of_plan"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_essence" />


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="270dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="100dp"/>

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
       </ScrollView>
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="169dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:focusable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_more" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_point_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="invisible"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_add" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="invisible"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_check" />
    </FrameLayout>

</RelativeLayout>